APPS-2809 fix cut off snackbar

--- a/web/src/main/resources/org/geogebra/web/resources/scss/snackbar.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/snackbar.scss
@@ -11,6 +11,7 @@
 		bottom: 8px;
 		left: 8px;
 		right: 8px;
+		margin-right: 16px;
 		padding: 6px 8px 6px 16px;
 		z-index: $z-snackbar;
 		background-color: $snackbar-background;
